istio-rollout/istio-rollout-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-rollout
  labels:
    istio-injection: enabled
